crates/shipper/tests/snapshots/state_integration__receipt_mixed_outcomes.snap
---
source: crates/shipper/tests/state_integration.rs
expression: json
---
{
  "receipt_version": "shipper.receipt.v2",
  "plan_id": "mixed",
  "registry": {
    "name": "crates-io",
    "api_base": "https://crates.io",
    "index_base": "https://index.crates.io"
  },
  "started_at": "2025-01-15T12:00:00Z",
  "finished_at": "2025-01-15T12:00:00Z",
  "packages": [
    {
      "name": "core",
      "version": "1.0.0",
      "attempts": 1,
      "state": {
        "state": "published"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 1500,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    },
    {
      "name": "utils",
      "version": "0.5.0",
      "attempts": 1,
      "state": {
        "state": "skipped",
        "reason": "already published"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 1500,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    },
    {
      "name": "cli",
      "version": "2.0.0",
      "attempts": 1,
      "state": {
        "state": "failed",
        "class": "retryable",
        "message": "registry timeout"
      },
      "started_at": "2025-01-15T12:00:00Z",
      "finished_at": "2025-01-15T12:00:00Z",
      "duration_ms": 1500,
      "evidence": {
        "attempts": [],
        "readiness_checks": []
      }
    }
  ],
  "event_log_path": ".shipper/events.jsonl",
  "git_context": null,
  "environment": {
    "shipper_version": "0.3.0",
    "cargo_version": "1.82.0",
    "rust_version": "1.82.0",
    "os": "linux",
    "arch": "x86_64"
  },
  "execution_result": "success"
}
